--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-주문완료 구글 연동까지 
-
-규격은 수정 필요
-
-Html
 
 <!DOCTYPE html>
 <html lang="ko">
@@ -271,7 +266,7 @@ VERSION: v1.4.4-sale-weekly-min
 - "WEEKLY"
 - "ALWAYS_CLOSE"
 */
-const SALE_MODE = "ALWAYS_OPEN";
+const SALE_MODE = "ALWAYS_CLOSE";
 // const SALE_MODE = "WEEKLY";
 // const SALE_MODE = "ALWAYS_CLOSE";
 
@@ -410,4 +405,5 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
