--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@ const SALE_MODE = "WEEKLY";
 // const SALE_MODE = "ALWAYS_CLOSE";
 
 /* WEEKLY 설정 */
-const WEEKLY_OPEN_DAYS = [5, 6]; // 금(1), 금(1)
+const WEEKLY_OPEN_DAYS = [5, 6]; // 월(1), 월(1)
 const WEEKLY_START_HOUR = 10;    // 오전 10시
-const WEEKLY_END_HOUR = 22;      // 오후 14시
+const WEEKLY_END_HOUR = 22;      // 오후 16시
 
 function isSaleOpen() {
   const now = new Date();
@@ -335,7 +335,7 @@ if (!isSaleOpen()) {
   }
 
   if (SALE_MODE === "WEEKLY") {
-    msg = "지정된 요일과 시간에만 주문이 가능합니다.";
+    msg = "주문이 끝났습니다. 매주 월요일 새로운 상품이 등록됩니다";
   }
 
   noticeEl.innerText = msg;
@@ -405,6 +405,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
