--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ VERSION: v1.4.4-sale-weekly-min
 - "WEEKLY"
 - "ALWAYS_CLOSE"
 */
-const SALE_MODE = "WEEKLY";
+const SALE_MODE = "ALWAYS_OPEN";
 // const SALE_MODE = "WEEKLY";
 // const SALE_MODE = "ALWAYS_CLOSE";
 
@@ -405,6 +405,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
