--- a/index.html
+++ b/index.html
@@ -242,6 +242,20 @@ textarea {
 <button id="orderBtn" class="action">주문 완료</button>
 <button id="copyBtn" class="action">📋 주문문구 복사</button>
 <textarea id="orderText" readonly></textarea>
+  <!-- 입금 계좌 안내 (주문 완료 후 노출) -->
+<div id="accountInfo" style="
+  display:none;
+  margin-top:14px;
+  padding:14px;
+  border-radius:12px;
+  background:#f1f3f5;
+  font-size:14px;
+  line-height:1.6;
+">
+  <strong>입금 계좌 안내</strong><br>
+  농협 301-0297-8175-81<br>
+  예금주: 설성푸드
+
 </div>
 
 <script>
@@ -385,14 +399,29 @@ orderBtn.onclick = async () => {
     console.error("GAS 전송 실패:", err);
   }
 
-  /* 주문문구 생성 (JS 문법 안정화 완료) */
-  orderText.value = `${nickname}님
-${items.map(i => `${i.name} ${i.qty}개`).join(", ")}
-총 ${total.toLocaleString()}원 입금 부탁드립니다 😊`;
+  /* 주문문구 생성 (주문 완료 후 톡방 공유용) */
+orderText.value = `[청담점 공동구매 주문]
+
+닉네임: ${nickname}
+수령일: ${visit}
+
+주문내역:
+${items.map(i => `- ${i.name} × ${i.qty}`).join("\n")}
+
+총 결제금액: ${total.toLocaleString()}원
+
+입금계좌:
+국민은행 123-456-789
+예금주: 설성푸드
+
+※ 입금 후 본 주문문구를 채팅방에 남겨주세요`;
+
 
   orderText.style.display = "block";
   copyBtn.style.display = "block";
   orderBtn.disabled = true;
+  document.getElementById("accountInfo").style.display = "block";
+
 };
 
 /* 복사 */
@@ -405,6 +434,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
