--- a/index.html
+++ b/index.html
@@ -148,12 +148,10 @@ button.action {
 }
 
 textarea {
-  width:100%;
-  margin-top:12px;
-  padding:12px;
-  border-radius:10px;
-  border:1px solid #ccc;
-  display:none;
+  position:absolute;
+  left:-9999px;
+  top:-9999px;
+  opacity:0;
 }
 </style>
 </head>
@@ -419,7 +417,10 @@ const orderMessage = `[설성푸드 공동구매 주문]
 수령일: ${visit}
 
 주문내역:
-${items.map(i => `- ${i.name} × ${i.qty}`).join("\n")}
+${items.map(i => {
+  const cleanName = i.name.replace(/\s*×\s*\d+$/, "");
+  return `• ${cleanName}\n  └ 수량: ${i.qty}개`;
+}).join("\n")}
 
 총 결제금액: ${total.toLocaleString()}원
 
@@ -429,14 +430,39 @@ ${items.map(i => `- ${i.name} × ${i.qty}`).join("\n")}
 
 ※ 입금 후 본 주문문구를 채팅방에 남겨주세요`;
 
+  const orderStatusHTML = `
+<div style="
+  color:#2f80ed;
+  font-weight:700;
+  margin-bottom:12px;
+">
+✅ 주문이 정상적으로 접수되었습니다
+</div>
+`;
+
+
 orderText.value = orderMessage;                  // 복사용 (숨김)
-document.getElementById("orderCard").innerText = orderMessage; // 화면 표시용
+document.getElementById("orderCard").innerHTML =
+  orderStatusHTML +
+  `<pre style="margin:0; font-family:inherit;">${orderMessage}</pre>`;
 
 
 document.getElementById("orderCard").style.display = "block";
 copyBtn.style.display = "block";
 orderBtn.disabled = true;
 document.getElementById("accountInfo").style.display = "block";
+  // 🔒 주문 완료 후 전체 입력 비활성 (재주문 방지)
+nicknameEl.disabled = true;
+visitEl.disabled = true;
+
+document.querySelectorAll(".plus, .minus").forEach(btn => {
+  btn.disabled = true;
+  btn.style.opacity = 0.4;
+});
+
+// 버튼 상태 명확화
+orderBtn.innerText = "주문 완료됨";
+orderBtn.style.background = "#adb5bd";
 
 
 };
@@ -451,6 +477,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
