--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@ v1.4.4 (STABLE PATCH)
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
+/* [PATCH 1] 전역 정렬 안정화 */
+* {
+  box-sizing: border-box;
+}
+
+  body {
   margin:0;
   padding:16px;
   background:#f6f7f9;
@@ -80,12 +85,14 @@ h1 {
   margin-bottom:18px;
 }
 
+/* [PATCH 3] 상품 이미지 비율 안정 */
 .product img {
-  width:100%;
-  height:220px;
-  object-fit:cover;
-  background:#eee;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: contain;
+  background: #f5f5f5;
 }
+
 
 .product-body {
   padding:12px;
@@ -253,6 +260,9 @@ textarea {
 ">
 </div>
 
+  <button id="copyBtn" style="display:none;">
+  📋 주문내역 복사
+  
   <!-- 입금 계좌 안내 (주문 완료 후 노출) -->
 <div id="accountInfo" style="
   display:none;
@@ -368,7 +378,16 @@ if (!isSaleOpen()) {
 }
 
 /* 주문 전송 */
-orderBtn.onclick = async () => {
+orderBtn.innerText = "주문 처리 중...";
+orderBtn.disabled = true;
+orderBtn.style.opacity = "0.7";
+
+  orderBtn.onclick = async () => {
+    // [PATCH 2] 주문 처리 중 UX
+orderBtn.innerText = "주문 처리 중...";
+orderBtn.disabled = true;
+orderBtn.style.opacity = "0.7";
+
   const nickname = nicknameEl.value.trim();
   const visit = visitEl.value;
 
@@ -477,6 +496,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
