--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <head>
+  <meta charset="utf-8">
+
+  <!-- OG 메타 -->
+  <meta property="og:title" content="청담점 공동구매 주문서">
+  <meta property="og:description" content="공동구매 주문 페이지">
+  <meta property="og:image" content="https://sulsungmarket.github.io/order/images/og.png">
+</head>
+
 <meta charset="UTF-8">
 <title>청담점 공동구매</title>
 
@@ -496,6 +505,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
