--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <head>
-  <meta charset="utf-8">
-
-  <!-- OG 메타 -->
-  <meta property="og:title" content="청담점 공동구매 주문서">
-  <meta property="og:description" content="공동구매 주문 페이지">
-  <meta property="og:image" content="https://sulsungmarket.github.io/order/images/og.png">
-</head>
-
+ 
 <meta charset="UTF-8">
 <title>청담점 공동구매</title>
+
+  <head>
+  <meta charset="UTF-8">
+  <title>청담점 공동구매</title>
+
+  <!-- OG 메타 태그 -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="설성푸드 청담점 공동구매">
+  <meta property="og:description" content="한정 수량 공동구매 주문 페이지">
+  <meta property="og:image" content="https://sulsungmarket.github.io/order/images/og.png">
+  <meta property="og:url" content="https://sulsungmarket.github.io/order/">
+
 
 <!--
 ====================================================
@@ -505,6 +509,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
