--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <!-- OG 메타 태그 -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="설성푸드 청담점 공동구매">
-  <meta property="og:description" content="한정 수량 공동구매 주문 페이지">
+  <meta property="og:title" content="설성목장 청담점">
+  <meta property="og:description" content="공동구매 주문 페이지">
   <meta property="og:image" content="https://sulsungmarket.github.io/order/images/og.png">
   <meta property="og:url" content="https://sulsungmarket.github.io/order/">
 
@@ -181,7 +181,7 @@ textarea {
 
 <body>
 <div class="container">
-<h1>설성푸드 공동구매</h1>
+<h1>청담점 공동구매</h1>
 
 <div class="field">
   <label>오픈채팅 닉네임</label>
@@ -411,7 +411,7 @@ orderBtn.style.opacity = "0.7";
   const visit = visitEl.value;
 
   if (!nickname || !visit) {
-    alert("닉네임과 수령일을 입력하세요");
+    alert("닉네임과 수령일을 입력해주세요");
     return;
   }
 
@@ -449,7 +449,7 @@ orderBtn.style.opacity = "0.7";
   }
 
 /* 주문문구 생성 (복사용 + 화면 표시용) */
-const orderMessage = `[설성푸드 공동구매 주문]
+const orderMessage = `[청담점 공동구매 주문서]
 
 닉네임: ${nickname}
 수령일: ${visit}
@@ -463,7 +463,7 @@ ${items.map(i => {
 총 결제금액: ${total.toLocaleString()}원
 
 입금계좌:
-국민은행 123-456-789
+농협: 301-0297-8175-81
 예금주: 설성푸드
 
 ※ 입금 후 본 주문문구를 채팅방에 남겨주세요`;
@@ -516,6 +516,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
