--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ ${items.map(i => {
   font-weight:700;
   margin-bottom:12px;
 ">
-✅ 주문이 정상적으로 접수되었습니다
+✅ 감사합니다! 주문이 접수되었습니다.
 </div>
 `;
 
@@ -519,6 +519,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
