--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- OG 메타 태그 -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="설성목장 청담점">
-  <meta property="og:description" content="공동구매 주문 페이지">
+  <meta property="og:description" content="공동구매 주문서">
   <meta property="og:image" content="https://sulsungmarket.github.io/order/images/og.png">
   <meta property="og:url" content="https://sulsungmarket.github.io/order/">
 
@@ -519,6 +519,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
