--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ textarea {
 <div id="orderCard" style="
   display:none;
   margin-top:14px;
-  padding:8px 16px 16px;
+  padding:0 16px 16px 16px;
   border-radius:14px;
   background:#f8f9fa;
   font-size:14px;
@@ -540,6 +540,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
