--- a/index.html
+++ b/index.html
@@ -479,16 +479,15 @@ ${items.map(i => {
 ※ 입금 후 본 주문문구를 채팅방에 남겨주세요`;
 
 
-const orderStatusHTML = `
-<div style="
+const orderStatusHTML =
+`<div style="
   color:#2f80ed;
   font-weight:700;
   margin:0;
   padding:0;
 ">
 ✅ 감사합니다! 주문이 접수되었습니다.
-</div>
-`;
+</div>`;
 
 orderText.value = orderMessage;
 
@@ -539,6 +538,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
