--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@ textarea {
   <strong>입금 계좌 안내</strong><br>
   농협 301-0297-8175-81<br>
   예금주: 설성푸드
+  매장문의: 02-888-8888
 
 </div>
 
@@ -546,6 +547,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
