--- a/index.html
+++ b/index.html
@@ -520,12 +520,13 @@ ${items.map(i => {
 농협 301-0297-8175-81
 예금주: 설성푸드
 
-※ 입금 후 본 주문문구를 채팅방에 남겨주세요`;
+※ 입금 후 본 주문문구를 채팅방에 남겨주세요
+
 ────────────
 🎁 오늘도 설성 멤버십 안내
 월 1,990원으로 누리는 압도적 혜택
 👉 https://www.sulsungmall.com/goods/event_sale.php?sno=119
-────────────
+────────────`;
 
 
 
@@ -587,4 +588,5 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
