--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@ VERSION: v1.5.1-header-branding
 ">
   <strong>입금 계좌 안내</strong><br>
   농협 301-0297-8175-81<br>
-  예금주: 설성푸드
-  매장문의: 02-888-8888
+  예금주: 설성푸드<br>
+  매장문의: 02-830-0062
 
 </div>
 
@@ -522,12 +522,6 @@ ${items.map(i => {
 
 ※ 입금 후 본 주문문구를 채팅방에 남겨주세요
 
-────────────
-🎁 오늘도 설성 멤버십 안내
-월 1,990원으로 누리는 압도적 혜택
-👉 https://www.sulsungmall.com/goods/event_sale.php?sno=119
-────────────`;
-
 
 
 const orderStatusHTML =
@@ -588,6 +582,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
