--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@ VERSION: v1.5.1-header-branding
   font-size:14px;
   line-height:1.6;
 ">
-  <strong>입금 계좌 안내</strong><br>
-  농협 301-0297-8175-81<br>
-  예금주: 설성푸드<br>
-  매장문의: 02-830-0062
+  <strong>🏦 입금 계좌 안내</strong><br>
+농협 301-0297-8175-81<br>
+예금주: 설성푸드<br><br>
+📞 매장문의: 02-830-0062
 
 </div>
 
@@ -582,6 +582,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
